--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,16 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "next": "14.1.0",
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.4",
+    "@mui/material": "^5.15.4",
+    "@mui/material-nextjs": "^5.15.3",
+    "@tanstack/react-query": "^5.17.12",
+    "axios": "^1.6.5",
+    "dayjs": "^1.11.10"
   },
   "devDependencies": {
     "typescript": "^5",
